RB-878: Fix display on firefox

--- a/public/chirpy.css
+++ b/public/chirpy.css
@@ -141,6 +141,8 @@ a {
     background-color: rgba(0,0,0,0.1);
     position: fixed;
     bottom: 0px;
+    right: 0px;
+    left: 0px;
 }
 
 #rows {
